# pomododragon

./: .gitignore  Cargo.toml  Dockerfile  README.md
cli/: Cargo.toml
cli/src/: main.rs
lib/: Cargo.toml
lib/src/: action.rs  command.rs  lib.rs  output.rs  pomo.rs  promo.rs  task.rs  time.rs
web/: Cargo.toml  index.html  style-dark.scss  style.scss
web/src/: about.rs  app.rs  bottombar.rs  error.rs  footer.rs  icon.rs  input.rs  main.rs  nav.rs  notfound.rs  numberinput.rs  router.rs
