[package]
name = "pomododragon-cli"
version = "0.1.0"
authors = ["Lukas Krickl <lukas@krickl.dev>"]
description = ""
license = "MIT"
homepage = "https://github.com/unlink2/pomododragon"
edition = "2021"

[[bin]]
name = "pomododragon"
path = "src/main.rs"

[dependencies]
pomododragon = {path = "../lib"}
