[package]
name = "pomododragon-cli"
version = "0.1.0"
authors = ["Lukas Krickl <lukas@krickl.dev>"]
description = ""
license = "MIT"
homepage = "https://github.com/unlink2/pomododragon"
edition = "2021"

[[bin]]
name = "pomododragon"
path = "src/main.rs"

[dependencies]
pomododragon = {path = "../lib"}
termion = "*"
spinners = "2.0.0"
clap = { version = "3.0.0-rc.4",  features=["derive"] }
