[package]
name = "pomododragon"
version = "0.1.0"
authors = ["Lukas Krickl <lukas@krickl.dev>"]
description = ""
license = "MIT"
homepage = "https://github.com/unlink2/pomododragon"
readme = "../README.md"
edition = "2021"

[lib]
name = "pomododragon"
path = "src/lib.rs"

[features]
wasm-bindgen = [ "instant/wasm-bindgen" ]

[dependencies]
derive_builder = "0.10.2"
instant = "0.1.12"
