[package]
name = "pomododragon-web"
version = "0.1.0"
authors = ["Lukas Krickl <lukas@krickl.dev>"]
description = ""
license = "MIT"
homepage = "https://github.com/unlink2/pomododragon"
edition = "2021"

[[bin]]
name = "pomododragon-web"
path = "src/main.rs"

[dependencies]
pomododragon = {path = "../lib"}
yew = "0.18"
yew-router = "0.15.0"
wasm-logger = "0.2"
log = "0.4"
instant = { version = "0.1.12", features = [ "wasm-bindgen", "inaccurate" ] }
console_error_panic_hook = "0.1.7"
