[package]
name = "pomododragon-web"
version = "0.1.0"
authors = ["Lukas Krickl <lukas@krickl.dev>"]
description = ""
license = "MIT"
homepage = "https://github.com/unlink2/pomododragon"
edition = "2021"

[[bin]]
name = "pomododragon-web"
path = "src/main.rs"

[dependencies]
pomododragon = {path = "../lib"}
yew = "0.19.3"
yew-router = "0.16.0"
wasm-logger = "0.2"
log = "0.4"
instant = { version = "0.1.12", features = [ "wasm-bindgen", "inaccurate" ] }
console_error_panic_hook = "0.1.7"
gloo = "0.4"
gloo-timers = "0.2.2"
web-sys = "0.3.55"
prefers-color-scheme = "0.1.1"
